@@ -355,14 +355,15 @@ bool EventTargetNode::dispatchProgressEvent(const AtomicString &eventType, bool 
     return dispatchEvent(new ProgressEvent(eventType, lengthComputableArg, loadedArg, totalArg), ec, true);
 }
 
-#if ENABLE(DOM_STORAGE)
 void EventTargetNode::dispatchStorageEvent(const AtomicString &eventType, const String& key, const String& oldValue, const String& newValue, Frame* source)
 {
+#if ENABLE(DOM_STORAGE)
     ASSERT(!eventDispatchForbidden());
     ExceptionCode ec = 0;
     dispatchEvent(new StorageEvent(eventType, key, oldValue, newValue, source->document()->documentURI(), source->domWindow()), ec, true); 
-}
 #endif
+}
+
 
 void EventTargetNode::removeHTMLEventListener(const AtomicString &eventType)
 {
